package dp.structural.decorator;

public interface Car {
    public void assemble();
}